--- a/frontend/templates/Login.html
+++ b/frontend/templates/Login.html
@@ -94,7 +94,9 @@
           <input type="checkbox" id="rememberMe" class="accent-[var(--brand-primary)] rounded transition" />
           <span>Запомнить меня</span>
         </label>
-        <a href="#" class="text-[var(--brand-primary)] font-medium hover:underline">Забыли пароль?</a>
+        <a href="{% url 'password_reset' %}" class="text-[var(--brand-primary)] font-medium hover:underline">
+          Забыли пароль?
+        </a>
       </div>
 
       <!-- Кнопка входа -->
@@ -108,7 +110,6 @@
     </form>
   </main>
 
-
   <script>
     function togglePassword(inputId, iconId) {
       const input = document.getElementById(inputId);
@@ -117,8 +118,8 @@
       input.type = isHidden ? 'text' : 'password';
 
       icon.innerHTML = isHidden
-        ? `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.269-2.943-9.542-7a10.057 10.057 0 011.846-3.019m3.41-2.44A9.956 9.956 0 0112 5c4.477 0 8.268 2.943 9.542 7a10.053 10.053 0 01-4.109 5.103M15 12a3 3 0 11-6 0 3 3 0 016 0z" />\n           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3l18 18" />`
-        : `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />\n           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5s8.268 2.943 9.542 7c-1.274 4.057-5.065 7-9.542 7s-8.268-2.943-9.542-7z" />`;
+        ? `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.269-2.943-9.542-7a10.057 10.057 0 011.846-3.019m3.41-2.44A9.956 9.956 0 0112 5c4.477 0 8.268 2.943 9.542 7a10.053 10.053 0 01-4.109 5.103M15 12a3 3 0 11-6 0 3 3 0 016 0z" />\n<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3l18 18" />`
+        : `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />\n<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5s8.268 2.943 9.542 7c-1.274 4.057-5.065 7-9.542 7s-8.268-2.943-9.542-7z" />`;
     }
   </script>
 </body>
