--- a/frontend/templates/Register.html
+++ b/frontend/templates/Register.html
@@ -100,6 +100,14 @@
         </div>
       </div>
 
+           <div>
+        <label for="role" class="block mb-1 text-sm font-medium">Роль</label>
+        <select id="role" name="role" required class="w-full px-4 py-3 text-sm rounded-lg border border-[var(--border-color)] bg-white">
+          <option value="student">Ученик</option>
+          <option value="teacher">Преподаватель</option>
+        </select>
+      </div>
+
       <button type="submit" class="w-full py-3 bg-[var(--text-main)] hover:bg-black text-white text-base font-semibold rounded-lg transition">Зарегистрироваться</button>
 
       <p class="text-center text-sm text-secondary mt-6">
